feat: Switch from JDK11 HttpClient to OkHttp and downgrade JDK to 1.8