@@ -1,14 +1,15 @@
 package com.getindata.connectors.http;
 
-import java.net.URI;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.Arrays;
-import java.util.Objects;
-
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 import org.junit.jupiter.api.Assertions;
+
+import java.net.URI;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+import java.util.Arrays;
+import java.util.Objects;
+
 import static org.assertj.core.api.Assertions.assertThat;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
@@ -19,7 +20,7 @@ public final class TestHelper {
     public static String readTestFile(String pathToFile) {
         try {
             URI uri = Objects.requireNonNull(INSTANCE.getClass().getResource(pathToFile)).toURI();
-            return Files.readString(Path.of(uri));
+            return new String(Files.readAllBytes(Paths.get(uri)));
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
