@@ -1,13 +1,8 @@
 package com.getindata.connectors.http.internal.sink.httpclient;
 
-import java.net.http.HttpClient;
-import java.util.List;
-import java.util.Properties;
-import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import java.util.stream.Stream;
-
+import com.getindata.connectors.http.internal.config.HttpConnectorConfigConstants;
+import com.getindata.connectors.http.internal.sink.HttpSinkRequestEntry;
+import okhttp3.OkHttpClient;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -15,19 +10,24 @@ import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Properties;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
+
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import com.getindata.connectors.http.internal.config.HttpConnectorConfigConstants;
-import com.getindata.connectors.http.internal.sink.HttpSinkRequestEntry;
 
 @ExtendWith(MockitoExtension.class)
 class BatchRequestSubmitterTest {
 
     @Mock
-    private HttpClient mockHttpClient;
+    private OkHttpClient mockHttpClient;
 
     @ParameterizedTest
     @CsvSource(value = {"50, 1", "5, 1", "3, 2", "2, 3", "1, 5"})
@@ -39,11 +39,9 @@ class BatchRequestSubmitterTest {
             String.valueOf(batchSize)
         );
 
-        when(mockHttpClient.sendAsync(any(), any())).thenReturn(new CompletableFuture<>());
-
         BatchRequestSubmitter submitter = new BatchRequestSubmitter(
             properties,
-            new String[0],
+            new HashMap<>(),
             mockHttpClient
         );
 
@@ -54,14 +52,14 @@ class BatchRequestSubmitterTest {
                 .collect(Collectors.toList())
         );
 
-        verify(mockHttpClient, times(expectedNumberOfBatchRequests)).sendAsync(any(), any());
+        verify(mockHttpClient, times(expectedNumberOfBatchRequests)).newCall(any()).enqueue(any());
     }
 
     private static Stream<Arguments> httpRequestMethods() {
         return Stream.of(
-            Arguments.of(List.of("PUT", "PUT", "PUT", "PUT", "POST"), 2),
-            Arguments.of(List.of("PUT", "PUT", "PUT", "POST", "PUT"), 3),
-            Arguments.of(List.of("POST", "PUT", "POST", "POST", "PUT"), 4)
+            Arguments.of(Arrays.asList("PUT", "PUT", "PUT", "PUT", "POST"), 2),
+            Arguments.of(Arrays.asList("PUT", "PUT", "PUT", "POST", "PUT"), 3),
+            Arguments.of(Arrays.asList("POST", "PUT", "POST", "POST", "PUT"), 4)
         );
     }
     @ParameterizedTest
@@ -76,11 +74,10 @@ class BatchRequestSubmitterTest {
             String.valueOf(50)
         );
 
-        when(mockHttpClient.sendAsync(any(), any())).thenReturn(new CompletableFuture<>());
 
         BatchRequestSubmitter submitter = new BatchRequestSubmitter(
             properties,
-            new String[0],
+            new HashMap<>(),
             mockHttpClient
         );
 
@@ -91,6 +88,6 @@ class BatchRequestSubmitterTest {
                 .collect(Collectors.toList())
         );
 
-        verify(mockHttpClient, times(expectedNumberOfBatchRequests)).sendAsync(any(), any());
+        verify(mockHttpClient, times(expectedNumberOfBatchRequests)).newCall(any()).enqueue(any());
     }
 }
